# espresso

./: .appveyor.yml  .clang-tidy  .cmake-format  .codecov.yml  .coveragerc  .cppcheck  .cproject  .cvsignore  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  .kodiak.toml  .lgtm.yml  .pre-commit-config.yaml  .project  .pylintrc  .travis.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  Espresso  Espresso.in  Espresso.install_reloc  INSTALL  LICENSE.TXT  Makefile  Makefile-am.am  Makefile-am.in  Makefile.AIX  Makefile.Darwin  Makefile.Linux  Makefile.OSF1  Makefile.am  Makefile.in  NEWS  README  README.md  (+254 more)
config/: CMakeLists.txt  Espresso.in  Espresso.m4  Makefile.am  ax_count_cpus.m4  ax_cxx_var_prettyfunc.m4  ax_mpi_only.m4  ax_prog_cc_mpi.m4  ax_prog_cxx_mpi.m4  ax_python_devel.m4  ax_python_module.m4  check_myconfig_complete.py  compile  compiler.m4  compilerflags.m4  config.guess  config.sub  cuda.m4  depcomp  featuredefs.py  fftw.m4  gen_doxyconfig.py  gen_featureconfig.py  gen_pxiconfig.py  gen_sampleconfig.py  genversion.sh  header.txt  knownconfigs.m4  missing  mpi.m4  myconfig-default.h.in  myconfig-sample-header.hpp  myconfig-sample-header.hpp.in
cython/: Makefile  Makefile.am  analyze.pxd  analyze.pyx  c_analyze.pxd  cellsystem.pxd  cellsystem.pyx  changeVolume.pxd  changeVolume.pyx  code_info.pxd  code_info.pyx  cuda_init.pxd  cuda_init.pyx  debye_hueckel.pxd  debye_hueckel.pyx  espresso.c  espresso.pxd  espresso.pyx  global_variables.pxd  global_variables.pyx  hello_parallel_world.py  initpy.py  integrate.pxd  integrate.pyx  interaction_data.pxd  interaction_data.pyx  invalidateSystem.pxd  invalidateSystem.pyx  lb.pxd  lb.pyx  make.sh  make_myconfig.py  myconfig.pxd  myconfig.pxi  particle_data.c  particle_data.pxd  particle_data.pyx  setup.py  startespresso.sh  thermostat.pxd  (+3 more)
cython/espresso/: espresso.pyx  global_variables.pxd  interaction_data.pyx  particle_data.pxd  particle_data.pyx  setup.py
cython/examples/: cellsystem_test.py  error_checking.py  globals.py  hello_parallel_world.py  highlander.py  lj_liquid.py  pylj_liquid.py  thermostat_test.py
doc/: .cvsignore  CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  background_errors.awk  bibliography.bib  doxygen.cfg  latexit.sh.in  main.dox  prepare_documentation.sh  publish_documentation.sh  update_documentation.sh
doc/TclTutor/: NOTICE  README  Tcl.cfg  Tcl0.lsn  Tcl1.lsn  Tcl10.lsn  Tcl11.lsn  Tcl12.lsn  Tcl13.lsn  Tcl14.lsn  Tcl15.lsn  Tcl16.lsn  Tcl17.lsn  Tcl18.lsn  Tcl19.lsn  Tcl2.lsn  Tcl20.lsn  Tcl21.lsn  Tcl22.lsn  Tcl23.lsn  Tcl24.lsn  Tcl25.lsn  Tcl26.lsn  Tcl27.lsn  Tcl28.lsn  Tcl29.lsn  Tcl3.lsn  Tcl30.lsn  Tcl31.lsn  Tcl32.lsn  Tcl33.lsn  Tcl34.lsn  Tcl35.lsn  Tcl36.lsn  Tcl37.lsn  Tcl38.lsn  Tcl39.lsn  Tcl4.lsn  Tcl40.lsn  Tcl41.lsn  (+12 more)
doc/dg/: CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  background_errors.awk  background_errors.sh  dg.tex  doxygen.cfg  header.html  todonotes.sty
doc/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile.am  background_errors.awk  background_errors.sh  bibliography.bib  bibtex_postprocess.cmake  bibtex_preprocess.cmake  doxygen_extra.css  gen_doxyconfig.py  main.dox
doc/figs/: bond_angle.eps  dihedral_angle.eps  directions.eps  ghost_cells.eps  ghost_cells.fig  ghost_communication.eps  linked_cells.eps  logo.eps  move_to_p_buf.eps  move_to_p_buf.fig  particles.eps
examples/: CMakeLists.txt  calc.cpp  calculator.cpp  motivation.cpp
libs/: CMakeLists.txt
scripts/: ABHmath.tcl  CMakeLists.txt  Makefile.am  Makefile.in  aux.tcl  auxiliary.tcl  background_errors.awk  blockfile_support.tcl  bundle.tcl  convertDeserno.tcl  countBonds.tcl  dielectrics.tcl  drude_functions.py  drude_particle.tcl  gibbs_ghmc.tcl  h5md.tcl  h5md_tcl_library.tcl  immersed_boundary.tcl  init.tcl  object_in_fluid.tcl  parallel_tempering.tcl  pdb.tcl  polymer.tcl  pov.tcl  runtime_errors.awk  set_features  shanchen.tcl  statistics.tcl  tclline.tcl  vmd_plg.tcl  vtf.tcl  vtk.tcl
src/: CMakeLists.txt  DipolarDirectSum.cu  DipolarDirectSum.hpp  EspressoSystemInterface.cpp  EspressoSystemInterface.hpp  EspressoSystemInterface_cuda.cu  HarmonicForce.cu  HarmonicForce.hpp  HarmonicPotential.h  HarmonicPotential.hpp  Makefile.am  Mmm1dgpuForce.cu  Mmm1dgpuForce.hpp  Potential.hpp  SystemInterface.hpp  Vector.hpp  acconfig.h.cmakein  acconfig.h.in~  acconfig.hpp  acconfig.hpp.in  adresso.c  adresso.cpp  adresso.h  adresso.hpp  angle.c  angle.cpp  angle.h  angle.hpp  angle_cosine.c  angle_cosine.cpp  angle_cosine.h  angle_cosine.hpp  angle_cossquare.c  angle_cossquare.cpp  angle_cossquare.h  angle_cossquare.hpp  angle_harmonic.c  angle_harmonic.cpp  angle_harmonic.h  angle_harmonic.hpp  (+492 more)
tests/: CMakeLists.txt  algorithms.cpp  arithmetic.cpp  empty_node.cpp  errors.cpp  exprtest.hpp  functions.cpp  interface.cpp  literals.cpp  mock.hpp  observables.cpp  optimizer.cpp  order_of_operations.cpp  properties.cpp  traits.cpp  unary.cpp  variables.cpp
testsuite/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  PE_MICELLE.tcl  README  accumulator.py  actor.py  analysis.tcl  analysis_system.data.chk  analyze_chains.py  analyze_distance.py  analyze_distribution.py  analyze_energy.py  analyze_gyration_tensor.py  analyze_itensor.py  angle.tcl  angle_cossquare.data  angle_harmonic.data  array_properties.py  auto_exclusions.py  bending_force_ibm.tcl  bondedInteractions.py  bonded_coulomb.tcl  brownian_mass-and-rinertia_per_particle.py  brownian_thermostat.py  catalytic_reaction.py  cell_model.tcl  cellsystem.py  cluster_analysis.py  collision-detection-angular.tcl  collision-detection-centers.tcl  collision-detection-glue.tcl  collision-detection-poc.tcl  collision_detection.py  comfixed.py  comfixed.tcl  comforce.tcl  comforce_system.data  command_syntax.tcl  (+322 more)
tools/: Makefile.am  blockfile.py  blockfile2pickle.py  blockfile2vtf.tcl  check_dihedral.tcl  compare_potential_and_forces.tcl  es_mpiexec.in  mpiio2blockfile.py  series.tcl  set_features  trace_memory.py  trace_memory.tcl  ubsan-suppressions.txt  uwerr.tcl  vmd_plg.tcl  watch.tcl
(+6634 files in other folders)
